Added commands to reverse queue and swap track, improved efficiency of queue, and cleaned up more code