@@ -75,11 +75,11 @@ public class PlayCmd extends MusicCommand {
         }
         String args = !event.getArgs().isEmpty() && event.getArgs().charAt(0) == '<' && event.getArgs().charAt(event.getArgs().length() - 1) == '>'
                 ? event.getArgs().substring(1, event.getArgs().length() - 1)
-                : event.getArgs().isEmpty() ? event.getMessage().getAttachments().get(0).getUrl() : event.getArgs();
+                : event.getArgs().isEmpty() ? event.getMessage().getAttachments().getFirst().getUrl() : event.getArgs();
         event.reply(loadingEmoji + " Loading... `[" + args + "]`", m -> bot.getPlayerManager().loadItemOrdered(event.getGuild(), args, new ResultHandler(m, event, false)));
     }
 
-    private final class ResultHandler implements AudioLoadResultHandler {
+    private static final class ResultHandler implements AudioLoadResultHandler {
         private final Message m;
         private final CommandEvent event;
         private final boolean ytsearch;
@@ -145,7 +145,7 @@ public class PlayCmd extends MusicCommand {
         public void playlistLoaded(AudioPlaylist playlist) {
             if (playlist.getTracks().size() == 1 || playlist.isSearchResult()) {
                 AudioTrack single = playlist.getSelectedTrack();
-                loadSingle(single == null ? playlist.getTracks().get(0) : single, null);
+                loadSingle(single == null ? playlist.getTracks().getFirst() : single, null);
                 return;
             }
             if (playlist.getSelectedTrack() != null) {
